fix div overflow bug

--- a/sass/app.scss
+++ b/sass/app.scss
@@ -235,6 +235,7 @@ div.scroller {
 	padding-top: 3em;
 	position: absolute;
 	overflow-y: scroll;
+	overflow-x: hidden;
 }
  
 div.scroller.ng-enter.ng-enter-active {
